# coding-challenges

./: .gitmodules  README.md
ccwc/: ccwc.go  test.txt
coffee_shop/: package-lock.json  package.json  vite.config.ts
coffee_shop/src/: App.tsx
compress/: go.mod  test-string.txt
compress/src/: huffman.go
dnsresolver/: Cargo.toml
dnsresolver/src/: main.rs
simd/: simd_math.cpp
smolai/convnet/: vggnet.py
src/: main.rs
url_shortener/: package.json  tailwind.config.ts  vite.config.ts
url_shortener/backend/: Cargo.toml  docker-compose.yml
url_shortener/backend/src/: main.rs
url_shortener/backend/src/db/: Cargo.toml  mod.rs  ops.rs
url_shortener/backend/src/db/queries/: init_table.sql  insert_url.sql
url_shortener/backend/src/db/src/: lib.rs  ops.rs
url_shortener/src/: App.tsx  URLForm.tsx
web-server/src/: client.c  http.h  showip.c  webserver.c
