[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"]}
flexi_logger = "0.31.2"
log = "0.4.27"
actix-cors = "0.7.1"
tokio-postgres = "0.7.13"
db = { path = "./src/db" }
